# gofile_cli

./: .env.example  .gitignore  GoFileShell.py  pyproject.toml  pytest.ini  reqiurements.txt  requirements-test.txt  requirements.txt
gofile_cli/: __init__.py  __main__.py  cli.py  config.py
gofile_cli/api/: GoFile.py  GoFile_API.md  GoFile_API_EN.md  MailTM.py  __init__.py
gofile_cli/cli/: GoFileShell.py
gofile_cli/entity/: __init__.py
gofile_cli/entity/gofile/: ContentCreateInfo.py  ContentDeleteInfo.py  ContentInfo.py  ContentUploadInfo.py  IpInfo.py  Profile.py  StatsCurrent.py  __init__.py
gofile_cli/entity/mailtm/: Account.py  Domain.py  Exception.py  Message.py  __init__.py
gofile_cli/utils/: __init__.py  misc.py  utils.py
